--- a/index.html.html
+++ b/index.html.html
@@ -10,9 +10,9 @@
         <h1>CEO of CypherWrld</h1>
     </center>
     <center>
-        <a href="https://twitter.com/DeepAryan03" target="_blank"><img src="./img/IMG_20220423_195617.jpg" width="60px" height="60px"></a>
+        <a href="https://twitter.com/DeepAryan03" target="_blank"><img src="./IMG_20220423_195617.jpg" width="60px" height="60px"></a>
         <a href="https://pintrest.com" target="_blank"><img src="./IMG_20220423_195559.jpg" width="60px" height="60px"></a>
-        <a href="https://instagram.com/deep_aryan._?igshid=YmMyMTA2M2Y=" target="_blank"><img src="./img/IMG_20220423_195543.jpg" width="60px" height="60px"></a>
+        <a href="https://instagram.com/deep_aryan._?igshid=YmMyMTA2M2Y=" target="_blank"><img src="./IMG_20220423_195543.jpg" width="60px" height="60px"></a>
     </center>
     <center>
         <a href="https://youtu.be/v7ScGV5128A">
