--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-    <center><img class="photo" src="./img/IMG_20220403_191214.jpg" alt="nahi ho rhi" width="200px" height="200px"></center>
+    <center><img class="photo" src="./IMG_20220403_191214.jpg" alt="nahi ho rhi" width="200px" height="200px"></center>
     <center>
         <h1>CEO of CypherWrld</h1>
     </center>
